Added styles for front temp page

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 
         <!-- Main Message Section -->
         <div class="content">
-            <header>
-                <img src="./3.png" alt="ai2all Logo" class="logo">
-                <h1>A Message from the Founders of ai2all</h1>
+            <header>              <h1>A Message from the Founders of ai2all</h1>
             </header>
 
             <section>
@@ -48,6 +46,8 @@
                 <footer>
                     <p>Regards,<br>Founders, ai2all</p>
                     <p>You can reach us at: <a href="mailto:ai2all@ispeedbiz.com">ai2all@ispeedbiz.com</a></p>
+                    <img src="./3.png" alt="ai2all Logo" class="logo">
+  
                 </footer>
             </section>
         </div>
